# vicare-curl

./: .gitignore  ANNOUNCE  Makefile.am  README  TODO.org  configure.ac  configure.sh
doc/: Makefile.am  macros.texi  vicare-curl.texi
lib/: Makefile.am  compile-all.sps  compile-nausicaa.sps  dependencies.make  features.c  libraries.scm
lib/vicare/net/: curl.sls  curl.vicare.sls
lib/vicare/net/curl/: constants.sls.in  constants.vicare.sls.in  unsafe-capi.sls  unsafe-capi.vicare.sls
meta/autoconf/: vicare.m4
meta/makefiles/: lib.am
src/: Makefile.am  not-interfaced.c  vicare-curl-easy.c  vicare-curl-internals.h  vicare-curl-misc.c  vicare-curl-multi.c  vicare-curl-version.c  vicare-curl.c
tests/: Makefile.am  demo-easy.sps  demo-for-documentation.sps  demo-for-plain-documentation.sps  demo-for-plain-easy.sps  demo-for-plain-multi.sps  demo-multi.sps  test-vicare-curl-callbacks.sps  test-vicare-curl-core.sps  test-vicare-curl-easy.sps  test-vicare-curl-init.sps  test-vicare-curl-multi.sps  test-vicare-curl-version.sps  test-vicare-curl.sps
