## Process this file with automake to produce Makefile.in

TESTS			= \
	test-vicare-curl-version.sps		\
	test-vicare-curl-init.sps		\
	test-vicare-curl-core.sps		\
	test-vicare-curl-easy.sps		\
	test-vicare-curl-multi.sps		\
	test-vicare-curl-callbacks.sps

EXTRA_DIST = \
	test-vicare-curl-version.sps		\
	test-vicare-curl-init.sps		\
	test-vicare-curl-core.sps		\
	test-vicare-curl-easy.sps		\
	test-vicare-curl-multi.sps		\
	test-vicare-curl-callbacks.sps		\
	\
	demo-for-documentation.sps		\
	demo-easy.sps				\
	demo-multi.sps

include $(top_srcdir)/meta/makefiles/tests.am

### end of file
